@@ -1,0 +1,7 @@
+#!/bin/sh
+
+# Test case due to Ryan Niebur <ryan@debian.org>.
+
+set -e
+
+$SORT_DCTRL -kpriority:nr,id:nr
